Converting Java 14 and Mindustry 6.0 soruce