@@ -12,11 +12,11 @@ import essentials.network.Client;
 import essentials.network.Server;
 import mindustry.Vars;
 import mindustry.content.Blocks;
-import mindustry.entities.type.Player;
-import mindustry.game.Difficulty;
 import mindustry.game.EventType;
 import mindustry.game.Team;
 import mindustry.gen.Call;
+import mindustry.gen.Groups;
+import mindustry.gen.Playerc;
 import mindustry.net.Packets;
 import org.apache.maven.artifact.versioning.DefaultArtifactVersion;
 import org.hjson.JsonObject;
@@ -35,7 +35,6 @@ import java.util.regex.Pattern;
 import static essentials.Main.*;
 import static mindustry.Vars.*;
 import static mindustry.core.NetClient.colorizeName;
-import static mindustry.core.NetClient.onSetRules;
 import static org.hjson.JsonValue.readJSON;
 
 public class Event {
@@ -43,42 +42,43 @@ public class Event {
 
     public Event() {
         Events.on(EventType.TapConfigEvent.class, e -> {
-            if (e.tile.entity != null && e.tile.entity.block != null && e.player != null && config.alertAction()) {
-                for (Player p : playerGroup.all()) {
-                    PlayerData playerData = playerDB.get(p.uuid);
+            if (e.tile.block() != null && e.player != null && config.alertAction()) {
+                for (Playerc p : Groups.player) {
+                    PlayerData playerData = playerDB.get(p.uuid());
                     if (playerData.alert()) {
-                        p.sendMessage(new Bundle(playerData.locale()).get("tap-config", e.player.name, e.tile.entity.block.name));
+                        p.sendMessage(new Bundle(playerData.locale()).get("tap-config", e.player.name(), e.tile.block().name));
                     }
                 }
                 if (config.debug())
-                    Log.info("anti-grief.build.config", e.player.name, e.tile.block().name, e.tile.x, e.tile.y);
-                if (config.logging()) Log.write(Log.LogType.tap, "log.tap-config", e.player.name, e.tile.block().name);
+                    Log.info("anti-grief.build.config", e.player.name(), e.tile.block().name, e.tile.x(), e.tile.y());
+                if (config.logging())
+                    Log.write(Log.LogType.tap, "log.tap-config", e.player.name(), e.tile.block().name);
             }
         });
 
         Events.on(EventType.TapEvent.class, e -> {
-            if (config.logging()) Log.write(Log.LogType.tap, "log.tap", e.player.name, e.tile.block().name);
+            if (config.logging()) Log.write(Log.LogType.tap, "log.tap", e.player.name(), e.tile.block().name);
 
-            PlayerData playerData = playerDB.get(e.player.uuid);
+            PlayerData playerData = playerDB.get(e.player.uuid());
 
             if (!playerData.error()) {
                 for (PluginData.warpzone data : pluginData.warpzones) {
-                    if (e.tile.x > data.getStartTile().x && e.tile.x < data.getFinishTile().x) {
-                        if (e.tile.y > data.getStartTile().y && e.tile.y < data.getFinishTile().y) {
-                            Log.info("player.warped", e.player.name, data.ip + ":" + data.port);
+                    if (e.tile.x() > data.getStartTile().x && e.tile.x() < data.getFinishTile().x) {
+                        if (e.tile.y() > data.getStartTile().y && e.tile.y() < data.getFinishTile().y) {
+                            Log.info("player.warped", e.player.name(), data.ip + ":" + data.port);
                             playerData.connected(false);
                             playerData.connserver("none");
-                            Call.onConnect(e.player.con, data.ip, data.port);
+                            Call.onConnect(e.player.con(), data.ip, data.port);
                             break;
                         }
                     }
                 }
 
                 for (PluginData.warpblock data : pluginData.warpblocks) {
-                    if (e.tile.x >= world.tile(data.tilex, data.tiley).link().x && e.tile.x <= world.tile(data.tilex, data.tiley).link().x) {
-                        if (e.tile.y >= world.tile(data.tilex, data.tiley).link().y && e.tile.y <= world.tile(data.tilex, data.tiley).link().y) {
-                            Log.info("player.warped", e.player.name, data.ip + ":" + data.port);
-                            Call.onConnect(e.player.con, data.ip, data.port);
+                    if (e.tile.x() >= world.tile(data.tilex, data.tiley).link().x && e.tile.x() <= world.tile(data.tilex, data.tiley).link().x) {
+                        if (e.tile.y() >= world.tile(data.tilex, data.tiley).link().y && e.tile.y() <= world.tile(data.tilex, data.tiley).link().y) {
+                            Log.info("player.warped", e.player.name(), data.ip + ":" + data.port);
+                            Call.onConnect(e.player.con(), data.ip, data.port);
                             break;
                         }
                     }
@@ -87,21 +87,21 @@ public class Event {
         });
 
         Events.on(EventType.WithdrawEvent.class, e -> {
-            if (e.tile.entity != null && e.player.item().item != null && e.player.name != null && config.antiGrief()) {
-                for (Player p : playerGroup.all()) {
-                    PlayerData playerData = playerDB.get(p.uuid);
+            if (e.player.miner().item() != null && e.player.name() != null && config.antiGrief()) {
+                for (Playerc p : Groups.player) {
+                    PlayerData playerData = playerDB.get(p.uuid());
                     if (playerData.alert()) {
-                        p.sendMessage(new Bundle(playerData.locale()).get("log.withdraw", e.player.name, e.player.item().item.name, e.amount, e.tile.block().name));
+                        p.sendMessage(new Bundle(playerData.locale()).get("log.withdraw", e.player.name(), e.player.miner().item().name, e.amount, e.tile.block().name));
                     }
                 }
                 if (config.debug())
-                    Log.info("log.withdraw", e.player.name, e.player.item().item.name, e.amount, e.tile.block().name);
+                    Log.info("log.withdraw", e.player.name(), e.player.miner().item().name, e.amount, e.tile.block().name);
                 if (config.logging())
-                    Log.write(Log.LogType.withdraw, "log.withdraw", e.player.name, e.player.item().item.name, e.amount, e.tile.block().name);
+                    Log.write(Log.LogType.withdraw, "log.withdraw", e.player.name(), e.player.miner().item().name, e.amount, e.tile.block().name);
                 if (state.rules.pvp) {
                     if (e.item.flammability > 0.001f) {
-                        e.player.sendMessage(new Bundle(playerDB.get(e.player.uuid).locale()).get("system.flammable.disabled"));
-                        e.player.clearItem();
+                        e.player.sendMessage(new Bundle(playerDB.get(e.player.uuid()).locale()).get("system.flammable.disabled"));
+                        e.player.dead();
                     }
                 }
             }
@@ -112,27 +112,27 @@ public class Event {
             if (state.rules.pvp) {
                 int index = 5;
                 for (int a = 0; a < 5; a++) {
-                    if (state.teams.get(Team.all()[index]).cores.isEmpty()) {
+                    if (state.teams.get(Team.all[index]).cores.isEmpty()) {
                         index--;
                     }
                 }
                 if (index == 1) {
-                    for (int i = 0; i < playerGroup.size(); i++) {
-                        Player player = playerGroup.all().get(i);
-                        PlayerData target = playerDB.get(player.uuid);
+                    for (int i = 0; i < Groups.player.size(); i++) {
+                        Playerc player = Groups.player.getByID(i);
+                        PlayerData target = playerDB.get(player.uuid());
                         if (target.login()) {
-                            if (player.getTeam().name.equals(e.winner.name)) {
+                            if (player.team().name.equals(e.winner.name)) {
                                 target.pvpwincount(target.pvpwincount() + 1);
-                            } else if (!player.getTeam().name.equals(e.winner.name)) {
+                            } else if (!player.team().name.equals(e.winner.name)) {
                                 target.pvplosecount(target.pvplosecount() + 1);
                             }
                         }
                     }
                 }
             } else if (state.rules.attackMode) {
-                for (int i = 0; i < playerGroup.size(); i++) {
-                    Player player = playerGroup.all().get(i);
-                    PlayerData target = playerDB.get(player.uuid);
+                for (int i = 0; i < Groups.player.size(); i++) {
+                    Playerc player = Groups.player.getByID(i);
+                    PlayerData target = playerDB.get(player.uuid());
                     if (target.login()) {
                         target.attackclear(target.attackclear() + 1);
                     }
@@ -150,15 +150,15 @@ public class Event {
 
         Events.on(EventType.PlayerConnect.class, e -> {
             if (config.logging())
-                Log.write(Log.LogType.player, "log.player.connect", e.player.name, e.player.uuid, e.player.con.address);
+                Log.write(Log.LogType.player, "log.player.connect", e.player.name(), e.player.uuid(), e.player.con().address);
 
             // 닉네임이 블랙리스트에 등록되어 있는지 확인
             for (String s : pluginData.blacklist) {
-                if (e.player.name.matches(s)) {
+                if (e.player.name().matches(s)) {
                     try {
                         Locale locale = tool.getGeo(e.player);
-                        Call.onKick(e.player.con, new Bundle(locale).get("system.nickname.blacklisted.kick"));
-                        Log.info("system.nickname.blacklisted", e.player.name);
+                        Call.onKick(e.player.con(), new Bundle(locale).get("system.nickname.blacklisted.kick"));
+                        Log.info("system.nickname.blacklisted", e.player.name());
                     } catch (Exception ex) {
                         new CrashReport(ex);
                     }
@@ -166,14 +166,15 @@ public class Event {
             }
 
             if (config.strictName()) {
-                if (e.player.name.length() > 32) Call.onKick(e.player.con, "Nickname too long!");
+                if (e.player.name().length() > 32) Call.onKick(e.player.con(), "Nickname too long!");
                 //if (e.player.name.matches(".*\\[.*].*"))
-                //    Call.onKick(e.player.con, "Color tags can't be used for nicknames on this server.");
-                if (e.player.name.contains("　"))
-                    Call.onKick(e.player.con, "Don't use blank speical charactor nickname!");
-                if (e.player.name.contains(" ")) Call.onKick(e.player.con, "Nicknames can't be used on this server!");
-                if (Pattern.matches(".*\\[.*.].*", e.player.name))
-                    Call.onKick(e.player.con, "Can't use only color tags nickname in this server.");
+                //    Call.onKick(e.player.con(), "Color tags can't be used for nicknames on this server.");
+                if (e.player.name().contains("　"))
+                    Call.onKick(e.player.con(), "Don't use blank speical charactor nickname!");
+                if (e.player.name().contains(" "))
+                    Call.onKick(e.player.con(), "Nicknames can't be used on this server!");
+                if (Pattern.matches(".*\\[.*.].*", e.player.name()))
+                    Call.onKick(e.player.con(), "Can't use only color tags nickname in this server.");
             }
 
             /*if(config.isStrictname()){
@@ -182,55 +183,55 @@ public class Event {
                     log(LogType.log,"nickname-short");
                 }
                 if(e.player.name.matches("^(?=.*\\\\d)(?=.*[~`!@#$%\\\\^&*()-])(?=.*[a-z])(?=.*[A-Z])$")){
-                    e.player.con.kick("Server doesn't allow special characters.\n서버가 특수문자를 허용하지 않습니다.");
-                    log(LogType.log,"nickname-special", player.name);
+                    e.player.con().kick("Server doesn't allow special characters.\n서버가 특수문자를 허용하지 않습니다.");
+                    log(LogType.log,"nickname-special", player.name());
                 }
             }*/
         });
 
         // 플레이어가 아이템을 특정 블록에다 직접 가져다 놓았을 때
         Events.on(EventType.DepositEvent.class, e -> {
-            if (e.player.item().amount > e.player.mech.itemCapacity) {
-                player.con.kick("Invalid request!");
+            /*if (e.player.item().amount > e.player.mech.itemCapacity) {
+                player.con().kick("Invalid request!");
                 return;
-            }
-            for (Player p : playerGroup.all()) {
-                PlayerData playerData = playerDB.get(p.uuid);
+            }*/
+            for (Playerc p : Groups.player) {
+                PlayerData playerData = playerDB.get(p.uuid());
                 if (playerData.alert()) {
-                    p.sendMessage(new Bundle(playerData.locale()).get("anti-grief.deposit", e.player.name, e.player.item().item.name, e.tile.block().name));
+                    p.sendMessage(new Bundle(playerData.locale()).get("anti-grief.deposit", e.player.name(), e.player.miner().item().name, e.tile.block().name));
                 }
             }
             if (config.logging())
-                Log.write(Log.LogType.deposit, "log.deposit", e.player.name, e.player.item().item.name, e.tile.block().name);
+                Log.write(Log.LogType.deposit, "log.deposit", e.player.name(), e.player.miner().item().name, e.tile.block().name);
         });
 
         // 플레이어가 서버에 들어왔을 때
         Events.on(EventType.PlayerJoin.class, e -> {
             if (config.logging())
-                Log.write(Log.LogType.player, "log.player.join", e.player.name, e.player.uuid, e.player.con.address);
+                Log.write(Log.LogType.player, "log.player.join", e.player.name(), e.player.uuid(), e.player.con().address);
 
             vars.addPlayers(e.player);
-            e.player.isAdmin = false;
+            e.player.admin(false);
             Thread t = new Thread(() -> {
-                Thread.currentThread().setName(e.player.name + " Player Join thread");
-                PlayerData playerData = playerDB.load(e.player.uuid);
+                Thread.currentThread().setName(e.player.name() + " Player Join thread");
+                PlayerData playerData = playerDB.load(e.player.uuid());
                 Bundle bundle = new Bundle(playerData.locale());
 
                 if (config.loginEnable()) {
                     if (config.passwordMethod().equals("mixed")) {
                         if (!playerData.error() && config.autoLogin()) {
                             if (playerData.udid() != 0L) {
-                                new Thread(() -> Call.onConnect(e.player.con, vars.serverIP(), 7060)).start();
+                                new Thread(() -> Call.onConnect(e.player.con(), vars.serverIP(), 7060)).start();
                             } else {
                                 e.player.sendMessage(bundle.get("account.autologin"));
                                 playerCore.load(e.player);
                             }
                         } else {
                             Locale lc = tool.getGeo(e.player);
-                            if (playerDB.register(e.player.name, e.player.uuid, lc.getDisplayCountry(), lc.toString(), lc.getDisplayLanguage(), true, vars.serverIP(), "default", 0L, e.player.name, "none")) {
+                            if (playerDB.register(e.player.name(), e.player.uuid(), lc.getDisplayCountry(), lc.toString(), lc.getDisplayLanguage(), true, vars.serverIP(), "default", 0L, e.player.name(), "none")) {
                                 playerCore.load(e.player);
                             } else {
-                                Call.onKick(e.player.con, new Bundle().get("plugin-error-kick"));
+                                Call.onKick(e.player.con(), new Bundle().get("plugin-error-kick"));
                             }
                         }
                     } else if (config.passwordMethod().equals("discord")) {
@@ -245,7 +246,7 @@ public class Event {
                             } else {
                                 message = new Bundle(language).get("system.login.require.password");
                             }
-                            Call.onInfoMessage(e.player.con, message);
+                            Call.onInfoMessage(e.player.con(), message);
                         }
                     } else {
                         if (!playerData.error() && config.autoLogin()) {
@@ -259,7 +260,7 @@ public class Event {
                             } else {
                                 message = new Bundle(language).get("system.login.require.password");
                             }
-                            Call.onInfoMessage(e.player.con, message);
+                            Call.onInfoMessage(e.player.con(), message);
                         }
                     }
                 } else {
@@ -268,10 +269,10 @@ public class Event {
                         e.player.sendMessage(bundle.get("account.autologin"));
                         playerCore.load(e.player);
                     } else {
-                        Locale lc = tool.getGeo(e.player.con.address);
-                        boolean register = playerDB.register(e.player.name, e.player.uuid, lc.getDisplayCountry(), lc.toString(), lc.getDisplayLanguage(), true, vars.serverIP(), "default", 0L, e.player.name, "none");
+                        Locale lc = tool.getGeo(e.player.con().address);
+                        boolean register = playerDB.register(e.player.name(), e.player.uuid(), lc.getDisplayCountry(), lc.toString(), lc.getDisplayLanguage(), true, vars.serverIP(), "default", 0L, e.player.name(), "none");
                         if (!register || !playerCore.load(e.player)) {
-                            Call.onKick(e.player.con, new Bundle().get("plugin-error-kick"));
+                            Call.onKick(e.player.con(), new Bundle().get("plugin-error-kick"));
                         }
                     }
                 }
@@ -285,8 +286,8 @@ public class Event {
                         String line;
                         while ((line = br.readLine()) != null) {
                             IpAddressMatcher match = new IpAddressMatcher(line);
-                            if (match.matches(e.player.con.address)) {
-                                Call.onKick(e.player.con, new Bundle().get("anti-grief.vpn"));
+                            if (match.matches(e.player.con().address)) {
+                                Call.onKick(e.player.con(), new Bundle().get("anti-grief.vpn"));
                             }
                         }
                     } catch (IOException ex) {
@@ -295,16 +296,16 @@ public class Event {
                 }
 
                 // PvP 평화시간 설정
-                if (config.antiRush() && state.rules.pvp && vars.playtime() < config.antiRushtime()) {
+                /*if (config.antiRush() && state.rules.pvp && vars.playtime() < config.antiRushtime()) {
                     state.rules.playerDamageMultiplier = 0f;
                     state.rules.playerHealthMultiplier = 0.001f;
                     Call.onSetRules(state.rules);
                     vars.setPvPPeace(true);
-                }
+                }*/
 
                 // 플레이어 인원별 난이도 설정
-                if (config.autoDifficulty()) {
-                    int total = playerGroup.size();
+                /*if (config.autoDifficulty()) {
+                    int total = Groups.player.size();
                     if (config.difficultyEasy() >= total) {
                         state.rules.waveSpacing = Difficulty.valueOf("easy").waveTime * 60 * 60 * 2;
                         //tool.sendMessageAll("system.difficulty.easy");
@@ -319,7 +320,7 @@ public class Event {
                         //tool.sendMessageAll("system.difficulty.insane");
                     }
                     onSetRules(state.rules);
-                }
+                }*/
             });
             t.start();
         });
@@ -327,39 +328,39 @@ public class Event {
         // 플레이어가 서버에서 탈주했을 때
         Events.on(EventType.PlayerLeave.class, e -> {
             if (config.logging())
-                Log.write(Log.LogType.player, "log.player.leave", e.player.name, e.player.uuid, e.player.con.address);
+                Log.write(Log.LogType.player, "log.player.leave", e.player.name(), e.player.uuid(), e.player.con().address);
 
-            PlayerData player = playerDB.get(e.player.uuid);
+            PlayerData player = playerDB.get(e.player.uuid());
             if (player.login()) {
                 player.connected(false);
                 player.connserver("none");
                 if (state.rules.pvp && !state.gameOver) player.pvpbreakout(player.pvpbreakout() + 1);
             }
             playerDB.save(player);
-            vars.removePlayerData(p -> p.uuid().equals(e.player.uuid));
+            vars.removePlayerData(p -> p.uuid().equals(e.player.uuid()));
             vars.removePlayers(e.player);
         });
 
         // 플레이어가 수다떨었을 때
         Events.on(EventType.PlayerChatEvent.class, e -> {
             if (config.antiGrief() && (e.message.length() > Vars.maxTextLength || e.message.contains("Nexity#2671"))) {
-                Call.onKick(e.player.con, "Hacked client detected");
+                Call.onKick(e.player.con(), "Hacked client detected");
             }
 
-            PlayerData playerData = playerDB.get(e.player.uuid);
+            PlayerData playerData = playerDB.get(e.player.uuid());
             Bundle bundle = new Bundle(playerData.locale());
 
-            if (!e.message.startsWith("/")) Log.info("<&y" + e.player.name + ": &lm" + e.message + "&lg>");
+            if (!e.message.startsWith("/")) Log.info("<&y" + e.player.name() + ": &lm" + e.message + "&lg>");
 
             if (!playerData.error()) {
                 // 명령어인지 확인
                 if (!e.message.startsWith("/")) {
                     if (e.message.equals("y") && vote.size != 0) {
                         // 투표가 진행중일때
-                        if (vote.get(0).getVoted().contains(e.player.uuid)) {
+                        if (vote.get(0).getVoted().contains(e.player.uuid())) {
                             e.player.sendMessage(bundle.get("vote.already-voted"));
                         } else {
-                            vote.get(0).set(e.player.uuid);
+                            vote.get(0).set(e.player.uuid());
                         }
                     } else {
                         if (!playerData.mute()) {
@@ -369,7 +370,7 @@ public class Event {
                                     client.request(Client.Request.chat, e.player, e.message);
                                 } else if (config.serverEnable()) {
                                     // 메세지를 모든 클라이언트에게 전송함
-                                    String msg = "[" + e.player.name + "]: " + e.message;
+                                    String msg = "[" + e.player.name() + "]: " + e.message;
                                     try {
                                         for (Server.service ser : server.list) {
                                             ser.os.writeBytes(tool.encrypt(msg, ser.spec));
@@ -390,8 +391,8 @@ public class Event {
                         new Thread(() -> {
                             ArrayMap<String, String> buf = new ArrayMap<>();
                             try {
-                                for (Player p : playerGroup.all()) {
-                                    PlayerData target = playerDB.get(p.uuid);
+                                for (Playerc p : Groups.player) {
+                                    PlayerData target = playerDB.get(p.uuid());
                                     if (!target.error() && !target.mute()) {
                                         String original = playerData.locale().getLanguage();
                                         String language = target.locale().getLanguage();
@@ -403,7 +404,7 @@ public class Event {
                                         for (ObjectMap.Entry<String, String> b : buf) {
                                             if (language.equals(b.key)) {
                                                 match = true;
-                                                p.sendMessage("[orange][TR] [green]" + e.player.name + "[orange] >[white] " + b.value);
+                                                p.sendMessage("[orange][TR] [green]" + e.player.name() + "[orange] >[white] " + b.value);
                                                 break;
                                             }
                                         }
@@ -415,7 +416,7 @@ public class Event {
                                             con.setRequestProperty("X-NCP-APIGW-API-KEY", config.translatePw());
                                             con.setDoOutput(true);
                                             try (DataOutputStream wr = new DataOutputStream(con.getOutputStream())) {
-                                                wr.writeBytes("source=" + original + "&target=" + language + "&text=" + URLEncoder.encode(e.message, "UTF-8"));
+                                                wr.writeBytes("source=" + original + "&target=" + language + "&text=" + URLEncoder.encode(e.message, StandardCharsets.UTF_8));
                                                 wr.flush();
                                                 wr.close();
 
@@ -439,7 +440,7 @@ public class Event {
                                                         JsonObject object = readJSON(response.toString()).asObject();
                                                         String result = object.get("message").asObject().get("result").asObject().get("translatedText").asString();
                                                         buf.put(language, result);
-                                                        p.sendMessage("[orange][TR] [green]" + e.player.name + "[orange] >[white] " + result);
+                                                        p.sendMessage("[orange][TR] [green]" + e.player.name() + "[orange] >[white] " + result);
                                                     }
                                                 }
                                             } catch (Exception ex) {
@@ -448,10 +449,10 @@ public class Event {
                                         } else {
                                             if (perm.permission_user.get(playerData.uuid()).asObject().get("prefix") != null) {
                                                 if (!playerData.crosschat())
-                                                    p.sendMessage(perm.permission_user.get(playerData.uuid()).asObject().get("prefix").asString().replace("%1", colorizeName(e.player.id, e.player.name)).replace("%2", e.message));
+                                                    p.sendMessage(perm.permission_user.get(playerData.uuid()).asObject().get("prefix").asString().replace("%1", colorizeName(e.player.id(), e.player.name())).replace("%2", e.message));
                                             } else {
                                                 if (!playerData.crosschat())
-                                                    p.sendMessage("[orange]" + colorizeName(e.player.id, e.player.name) + "[orange] >[white] " + e.message);
+                                                    p.sendMessage("[orange]" + colorizeName(e.player.id(), e.player.name()) + "[orange] >[white] " + e.message);
                                             }
                                         }
                                     }
@@ -460,8 +461,8 @@ public class Event {
                                 new CrashReport(ex);
                             }
                         }).start();
-                    } else if (colorizeName(e.player.id, e.player.name) != null) {
-                        Call.sendMessage(perm.permission_user.get(playerData.uuid()).asObject().get("prefix").asString().replace("%1", colorizeName(e.player.id, e.player.name)).replace("%2", e.message));
+                    } else if (colorizeName(e.player.id(), e.player.name()) != null) {
+                        Call.sendMessage(perm.permission_user.get(playerData.uuid()).asObject().get("prefix").asString().replace("%1", colorizeName(e.player.id(), e.player.name())).replace("%2", e.message));
                     }
                 }
 
@@ -472,11 +473,13 @@ public class Event {
 
         // 플레이어가 블럭을 건설했을 때
         Events.on(EventType.BlockBuildEndEvent.class, e -> {
-            if (e.player == null) return; // 만약 건설자가 드론일경우
-            Log.write(Log.LogType.block, "log.block.place", e.player.name, e.tile.block().name);
+            if (e.unit.getPlayer() == null) return; // 만약 건설자가 드론일경우
+            Playerc player = e.unit.getPlayer();
 
-            PlayerData target = playerDB.get(e.player.uuid);
-            if (!e.breaking && e.player.buildRequest() != null && !target.error() && e.tile.block() != null) {
+            Log.write(Log.LogType.block, "log.block.place", player.name(), e.tile.block().name);
+
+            PlayerData target = playerDB.get(player.uuid());
+            if (!e.breaking && player.builder().buildPlan() != null && !target.error() && e.tile.block() != null) {
                 String name = e.tile.block().name;
                 try {
                     JsonObject obj = JsonValue.readHjson(root.child("Exp.hjson").reader()).asObject();
@@ -485,7 +488,7 @@ public class Event {
                     target.lastplacename(e.tile.block().name);
                     target.placecount(target.placecount() + 1);
                     target.exp(target.exp() + blockexp);
-                    if (e.player.buildRequest().block == Blocks.thoriumReactor)
+                    if (player.builder().buildPlan().block == Blocks.thoriumReactor)
                         target.reactorcount(target.reactorcount() + 1);
                 } catch (Exception ex) {
                     new CrashReport(ex);
@@ -503,13 +506,13 @@ public class Event {
                 }
 
                 if (config.debug() && config.antiGrief()) {
-                    Log.info("anti-grief.build.finish", e.player.name, e.tile.block().name, e.tile.x, e.tile.y);
+                    Log.info("anti-grief.build.finish", player.name(), e.tile.block().name, e.tile.x, e.tile.y);
                 }
 
-                float range = new AntiGrief().getDistanceToCore(e.player, e.tile);
+                float range = new AntiGrief().getDistanceToCore(e.unit, e.tile);
                 if (config.antiGrief() && range < 35 && e.tile.block() == Blocks.thoriumReactor) {
-                    e.player.sendMessage(new Bundle(target.locale()).get("anti-grief.reactor.close"));
-                    Call.onDeconstructFinish(e.tile, Blocks.air, e.player.id);
+                    player.sendMessage(new Bundle(target.locale()).get("anti-grief.reactor.close"));
+                    Call.onDeconstructFinish(e.tile, Blocks.air, player.id());
                 }/* else if (config.antiGrief()) {
                     for (int rot = 0; rot < 4; rot++) {
                         if (e.tile.getNearby(rot).block() != Blocks.liquidTank &&
@@ -528,11 +531,11 @@ public class Event {
 
         // 플레이어가 블럭을 뽀갰을 때
         Events.on(EventType.BuildSelectEvent.class, e -> {
-            if (e.builder instanceof Player && e.builder.buildRequest() != null && !Pattern.matches(".*build.*", e.builder.buildRequest().block.name) && e.tile.block() != Blocks.air) {
+            if (e.builder instanceof Playerc && e.builder.buildPlan() != null && !Pattern.matches(".*build.*", ((Playerc) e.builder).builder().buildPlan().block.name) && e.tile.block() != Blocks.air) {
                 if (e.breaking) {
-                    Log.write(Log.LogType.block, "log.block.remove", ((Player) e.builder).name, e.tile.block().name, e.tile.x, e.tile.y);
+                    Log.write(Log.LogType.block, "log.block.remove", ((Playerc) e.builder).name(), e.tile.block().name, e.tile.x, e.tile.y);
 
-                    PlayerData target = playerDB.get(((Player) e.builder).uuid);
+                    PlayerData target = playerDB.get(((Playerc) e.builder).uuid());
                     String name = e.tile.block().name;
                     try {
                         JsonObject obj = JsonValue.readHjson(root.child("Exp.hjson").reader()).asObject();
@@ -543,11 +546,11 @@ public class Event {
                         target.exp(target.exp() + blockexp);
                     } catch (Exception ex) {
                         new CrashReport(ex);
-                        Call.onKick(((Player) e.builder).con, new Bundle(target.locale()).get("not-logged"));
+                        Call.onKick(((Playerc) e.builder).con(), new Bundle(target.locale()).get("not-logged"));
                     }
 
                     // 메세지 블럭을 파괴했을 때, 위치가 저장된 데이터를 삭제함
-                    if (e.builder.buildRequest().block == Blocks.message) {
+                    if (((Playerc) e.builder).builder().buildPlan().block == Blocks.message) {
                         try {
                             for (int i = 0; i < pluginData.powerblock.size; i++) {
                                 if (pluginData.powerblock.get(i).tile == e.tile) {
@@ -568,8 +571,8 @@ public class Event {
                             if (obj.get(name) != null) {
                                 int blockreqlevel = obj.getInt(name, 999);
                                 if (level < blockreqlevel) {
-                                    Call.onDeconstructFinish(e.tile, e.tile.block(), ((Player) e.builder).id);
-                                    ((Player) e.builder).sendMessage(new Bundle(playerDB.get(((Player) e.builder).uuid).locale()).get("system.epg.block-require", name, blockreqlevel));
+                                    Call.onDeconstructFinish(e.tile, e.tile.block(), e.builder.id());
+                                    ((Playerc) e.builder).sendMessage(new Bundle(playerDB.get(((Playerc) e.builder).uuid()).locale()).get("system.epg.block-require", name, blockreqlevel));
                                 }
                             } else {
                                 Log.err("system.epg.block-not-valid", name);
@@ -580,7 +583,7 @@ public class Event {
                     }
                 }
                 if (config.debug() && config.antiGrief()) {
-                    Log.info("anti-grief.destroy", ((Player) e.builder).name, e.tile.block().name, e.tile.x, e.tile.y);
+                    Log.info("anti-grief.destroy", ((Playerc) e.builder).name(), e.tile.block().name, e.tile.x, e.tile.y);
                 }
             }
         });
@@ -588,18 +591,17 @@ public class Event {
         // 유닛을 박살냈을 때
         Events.on(EventType.UnitDestroyEvent.class, e -> {
             // 뒤진(?) 유닛이 플레이어일때
-            if (e.unit instanceof Player) {
-                Player player = (Player) e.unit;
-                PlayerData target = playerDB.get(player.uuid);
-                if (!state.teams.get(player.getTeam()).cores.isEmpty()) target.deathcount(target.deathcount() + 1);
+            if (e.unit instanceof Playerc player) {
+                PlayerData target = playerDB.get(player.uuid());
+                if (!state.teams.get(player.team()).cores.isEmpty()) target.deathcount(target.deathcount() + 1);
             }
 
             // 터진 유닛수만큼 카운트해줌
-            if (playerGroup != null && playerGroup.size() > 0) {
-                for (int i = 0; i < playerGroup.size(); i++) {
-                    Player player = playerGroup.all().get(i);
-                    PlayerData target = playerDB.get(player.uuid);
-                    if (!state.teams.get(player.getTeam()).cores.isEmpty()) target.killcount(target.killcount() + 1);
+            if (Groups.player != null && Groups.player.size() > 0) {
+                for (int i = 0; i < Groups.player.size(); i++) {
+                    Playerc player = Groups.player.getByID(i);
+                    PlayerData target = playerDB.get(player.uuid());
+                    if (!state.teams.get(player.team()).cores.isEmpty()) target.killcount(target.killcount() + 1);
                 }
             }
         });
@@ -612,11 +614,11 @@ public class Event {
                 }
             });
 
-            for (Player player : playerGroup.all()) {
+            for (Playerc player : Groups.player) {
                 if (player == e.player) {
-                    tool.sendMessageAll("player.banned", e.player.name);
-                    if (netServer.admins.isIDBanned(player.uuid)) {
-                        player.con.kick(Packets.KickReason.banned);
+                    tool.sendMessageAll("player.banned", e.player.name());
+                    if (netServer.admins.isIDBanned(player.uuid())) {
+                        player.con().kick(Packets.KickReason.banned);
                     }
                 }
             }
@@ -636,7 +638,7 @@ public class Event {
 
         // 이건 밴 해제되었을 때 작동
         Events.on(EventType.PlayerUnbanEvent.class, e -> {
-            if (client.activated) client.request(Client.Request.unbanid, null, e.player.uuid + "|<unknown>");
+            if (client.activated) client.request(Client.Request.unbanid, null, e.player.uuid() + "|<unknown>");
         });
 
         // 이건 IP 밴이 해제되었을 때 작동
